Novos design feito por CSS

--- a/index.html
+++ b/index.html
@@ -5,9 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Site Principal</title>
+    <link rel="stylesheet" href="assets/css/style.css">
+
+
 </head>
-<body style="background-color: rgb(178, 226, 222);">
-    <ul>
+<body>
+    <ul id="menu">
         <li>
             <a href="https://brasil.un.org/pt-br/sdgs" target= _blank">Ir para as ODS da ONU</a> 
         </li>
@@ -20,22 +23,67 @@
     
     <h1>Informações sobre a Onu</h1>
     
-    <p>
-        Os Objetivos de Desenvolvimento Sustentável são um apelo global à ação para acabar com a pobreza, proteger o meio ambiente e o clima e garantir que as pessoas, em todos os lugares, possam desfrutar de paz e de prosperidade. Estes são os objetivos para os quais as Nações Unidas estão contribuindo a fim de que possamos atingir a Agenda 2030 no Brasil.
-    </p>
 
-    <img src="assets/img/onu.PNG" alt="17 ODS DA ONU">
+    <div class="container">
+        <div class="p-30">
+            <p class="justify">
+                Os Objetivos de Desenvolvimento Sustentável são um apelo global à ação para acabar com a pobreza, proteger o meio ambiente e o clima e garantir que as pessoas, em todos os lugares, possam desfrutar de paz e de prosperidade. Estes são os objetivos para os quais as Nações Unidas estão contribuindo a fim de que possamos atingir a Agenda 2030 no Brasil.
+            </p>
+        </div>
+        <div>
+            <img class="p-30" 
+            src="assets/img/onu.PNG" 
+            alt="17 ODS DA ONU">
+        </div>
+    </div>
 
-    <h2>Explicativo da ONU</h2>
+    <h2 class="center">Explicativo da ONU</h2>
+    <div class="container">    
+        <iframe 
+        width="560" 
+        height="315" 
+        src="https://www.youtube.com/embed/ZSrhXP4-aec" 
+        frameborder="20" 
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+        allowfullscreen
+        ></iframe>
+    </div>
+    <hr>
+    <footer>
+        <div class="container mb-50">
+            <a href="https://web.facebook.com/?_rdc=1&_rdr">
+                <img class="tm-social p-30" src="assets/img/facebook.png" alt="Logo do Facebook">
+            </a>
+            <a href="https://github.com/">
+                <img class="tm-social p-30" src="assets/img/github.png" alt="Logo do github">
+            </a>
+            <a href="https://www.linkedin.com/">
+                <img class="tm-social p-30" src="assets/img/linkedin.png" alt="Logo do linkedin">
+            </a>
+            <a href="https://web.whatsapp.com/">
+                <img class="tm-social p-30" src="assets/img/whatsapp.png" alt="Logo do whatsapp">
+            </a> 
+            <a href="https://www.instagram.com/">
+                <img class="tm-social p-30" src="assets/img/instagram.png" alt="Logo do Instagram">
+            </a>
+            <a href="https://www.reddit.com/">
+                <img class="tm-social p-30" src="assets/img/reddit.png" alt="Logo do Reddit">
+            </a>
+            <a href="https://twitter.com/">
+                <img class="tm-social p-30" src="assets/img/twitter.png" alt="Logo do Twitter">
+            </a> 
+            <a href="https://www.youtube.com/">
+                <img class="tm-social p-30" src="assets/img/youtube.png" alt="Logo do Youtube">
+            </a> 
+            <a href="https://www.twitch.tv/">
+                <img class="tm-social p-30" src="assets/img/twitch.png" alt="Logo do Twitch">
+            </a> 
 
-    <iframe 
-    width="560" 
-    height="315" 
-    src="https://www.youtube.com/embed/ZSrhXP4-aec" 
-    frameborder="20" 
-    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
-    allowfullscreen
-    ></iframe>
+        </div>
+        <p class="center">
+            Todos direitos reservados: Wendell Gomes &copy
+        </p>
+    </footer>
 
 </body>
 </html>
