--- a/index.html
+++ b/index.html
@@ -15,21 +15,24 @@
             <a href="https://brasil.un.org/pt-br/sdgs" target= _blank">Ir para as ODS da ONU</a> 
         </li>
 
+
         <li>
             <a href="contato.html" >Envie sua mensagem</a>
         </li>
 
+
+
+
     </ul>
     
-    <h1>Informações sobre a Onu</h1>
-    
+    <h1 class="center">Informações sobre a Onu </h1>
+    <div>
+        <p class="center">
+            Os Objetivos de Desenvolvimento Sustentável são um apelo global à ação para acabar com a pobreza, proteger o meio ambiente e o clima e garantir que as pessoas, em todos os lugares, possam desfrutar de paz e de prosperidade. Estes são os objetivos para os quais as Nações Unidas estão contribuindo a fim de que possamos atingir a Agenda 2030 no Brasil.
+        </p>
+    </div>
 
     <div class="container">
-        <div class="p-30">
-            <p class="justify">
-                Os Objetivos de Desenvolvimento Sustentável são um apelo global à ação para acabar com a pobreza, proteger o meio ambiente e o clima e garantir que as pessoas, em todos os lugares, possam desfrutar de paz e de prosperidade. Estes são os objetivos para os quais as Nações Unidas estão contribuindo a fim de que possamos atingir a Agenda 2030 no Brasil.
-            </p>
-        </div>
         <div>
             <img class="p-30" 
             src="assets/img/onu.PNG" 
