Adionando modo escuro e JS

--- a/contato.html
+++ b/contato.html
@@ -19,19 +19,18 @@
       <div>
         <form>
           <label for="nome">Nome:</label> <br />
-          <input type="text" id="nome" />
-          <br />
+          <input type="text" id="nome" onkeyup = 'validaNome()'/>
+          <div id='txtNome'></div>
           <br />
           <label for="nome">E-mail:</label> <br />
-          <input type="email" id="email" />
-          <br />
+          <input type="email" id="email" onkeyup='validaEmail()'/>
+          <div id='txtEmail'></div>
           <br />
           <label for="assunto">Assunto:</label> <br />
-          <textarea name="assunto" id="assunto" cols="60" rows="5"></textarea>
-
+          <textarea name="assunto" id="assunto" cols="60" rows="5" onkeyup = "validaAssunto()"></textarea>
+          <div id='txtAssunto'></div>
           <br />
-          <br />
-          <button>Enviar</button>
+          <button onclick="enviar()">Enviar</button>
         </form>
       </div>
       <div class="ml-50">
@@ -48,6 +47,9 @@
           style="border: 5px ;"
           allowfullscreen=""
           loading="lazy"
+          onmousemove="mapaZoom()"
+          onmouseout="mapaNormal()"
+          id = 'mapa'
         ></iframe>
       </div>
     </div>
@@ -84,5 +86,8 @@
       </div>
       <p class="center">Todos direitos reservados: Wendell Gomes &copy</p>
     </footer>
+  
+    <script src="assets/js/script.js"></script>
+  
   </body>
 </html>
